--- a/mf_videos/index.html
+++ b/mf_videos/index.html
@@ -24,7 +24,7 @@
             <img class="logo__item" />
 
             <form class="container__input">
-                <input type="search" placeholder="Digite aqui..." class="input__pesquisa" />
+                <input type="text" placeholder="Digite aqui..." class="input__pesquisa" />
 
                 <figure class="container__pesquisa">
                     <img src="./src/img/cabecalho/search.png" alt="Lupa de pesquisa" class="pesquisa">
